ver 0.17.2 (2012/??/??)
* protocol:
  - fix crash in local file check
* decoder:
  - fluidsynth: remove throttle (requires libfluidsynth 1.1)
  - fluidsynth: stop playback at end of file
  - fluidsynth: check MIDI file format while scanning
  - fluidsynth: add sample rate setting
* output:
  - httpd: use monotonic clock, avoid hiccups after system clock adjustment
  - httpd: fix throttling bug after resuming playback
* playlist:
  - cue: map "PERFORMER" to "artist" or "album artist"
* mapper: fix non-UTF8 music directory name
* mapper: fix potential crash in file permission check
* playlist: fix use-after-free bug
* playlist: fix memory leak
* state_file: save song priorities
* player: disable cross-fading in "single" mode
* update: fix unsafe readlink() usage


ver 0.17.1 (2012/07/31)
* protocol:
  - require appropriate permissions for searchadd{,pl}
* tags:
  - aiff: support the AIFC format
  - ape: check for ID3 if no usable APE tag was found
* playlist:
  - cue: support file types "MP3", "AIFF"
* output:
  - fix noisy playback with conversion and software volume

ver 0.17 (2012/06/27)
* protocol:
  - support client-to-client communication
  - "update" and "rescan" need only "CONTROL" permission
  - new command "seekcur" for simpler seeking within current song
  - new command "config" dumps location of music directory
  - add range parameter to command "load"
  - print extra "playlist" object for embedded CUE sheets
  - new commands "searchadd", "searchaddpl"
* input:
  - cdio_paranoia: new input plugin to play audio CDs
  - curl: enable CURLOPT_NETRC
  - curl: non-blocking I/O
  - soup: new input plugin based on libsoup
* tags:
  - RVA2: support separate album/track replay gain
* decoder:
  - mpg123: implement seeking
  - ffmpeg: drop support for pre-0.5 ffmpeg
  - ffmpeg: support WebM
  - oggflac: delete this obsolete plugin
  - dsdiff: new decoder plugin
* output:
  - alsa: support DSD-over-USB (dCS suggested standard)